feat: 修改用户区字体

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "volar.inlayHints.eventArgumentInInlineHandlers": true
+  "volar.inlayHints.eventArgumentInInlineHandlers": true,
+  "editor.fontFamily": "JetBrains Mono,Consolas, 'Courier New', monospace"
 }
